# Engine

./: .clang-format  .gitignore  CMakeLists.txt
assets/html/: index.html
assets/shaders/opengl/: Shader.frag  Shader.vert
libcore/: CMakeLists.txt  PCH.hh
libcore/libcore/: App.cc  App.hh  ContentManager.hh  Engine.cc  Engine.hh  Resource.hh
libcore/libcore/ecs/: Component.hh  Scene.hh  System.cc  System.hh
libcore/libcore/lib/: Assert.hh  File.cc  File.hh  ListUtils.hh  Logger.hh  Map.hh  Math.hh  Memory.hh  Option.hh  Queue.hh  Result.hh  Utils.hh  Vector.hh
libcore/libcore/renderer/: Buffer.hh  BufferLayout.hh  Camera.cc  Camera.hh  Context.hh  Factory.hh  PlatformProvider.hh  RawRenderer.cc  RawRenderer.hh  Renderer.cc  Renderer.hh  Shader.hh  Target.hh  Texture.cc  Texture.hh  UniformLayout.hh
libcore/libcore/renderer/opengl/: Buffer.cc  Buffer.hh  Context.cc  Context.hh  DefaultTarget.hh  Factory.hh  Glad.hh  PlatformProvider.hh  RawRenderer.cc  RawRenderer.hh  Shader.cc  Shader.hh  ShaderSource.hh  Target.cc  Target.hh  Texture.cc  Texture.hh  VertexArray.cc  VertexArray.hh
libcore/libcore/window/: Factory.hh  Props.hh  Window.cc  Window.hh
libcore/libcore/window/event/: AppEvent.hh  Event.hh  KeyEvent.hh  MouseEvent.hh
libcore/libcore/window/input/: Input.hh  Key.hh
libcore/libcore/window/linux/: Factory.cc  Factory.hh
libcore/libcore/window/macos/: Factory.mm
libcore/libcore/window/platform/emscripten/: Factory.cc  Factory.hh
libcore/libcore/window/platform/linux/: Factory.cc
libcore/libcore/window/platform/macos/: Factory.hh  Factory.mm
libcore/libcore/window/platform/windows/: Factory.cc  Factory.hh
libcore/libcore/window/windows/: Factory.cc  Factory.hh
projects/android/: build.gradle
projects/android/app/: build.gradle
projects/android/app/src/main/: AndroidManifest.xml
projects/android/app/src/main/cc/: CMakeLists.txt
projects/android/gradle/wrapper/: gradle-wrapper.properties
projects/ios/Engine/: SceneDelegate.h  SceneDelegate.mm
projects/ios/ios.xcodeproj/: project.pbxproj
projects/ios/ios.xcodeproj/xcshareddata/xcschemes/: Engine.xcscheme
sandbox/: CMakeLists.txt
sandbox/sandbox/: Main.cc
src/: .clang-format
src/libcore/: CMakeLists.txt  PCH.hh
src/libcore/libcore/: App.cc  App.hh  ContentManager.hh  Engine.cc  Engine.hh  Platform.hh  Resource.hh
src/libcore/libcore/ecs/: Component.hh  Scene.hh  System.cc  System.hh
src/libcore/libcore/lib/: Assert.hh  File.cc  File.hh  HashMap.hh  ListUtils.hh  Logger.hh  Map.hh  Math.hh  Memory.hh  Queue.hh  Result.hh  Utils.hh  Vector.hh
src/libcore/libcore/renderer/: Buffer.hh  BufferLayout.hh  Camera.cc  Camera.hh  Context.hh  Factory.hh  GLSL.hh  PlatformProvider.hh  RawRenderer.cc  RawRenderer.hh  Renderer.cc  Renderer.hh  Shader.hh  Target.cc  Target.hh  Texture.cc  Texture.hh  UniformLayout.hh
src/libcore/libcore/renderer/opengl/: Buffer.cc  Buffer.hh  Context.cc  Context.hh  DefaultTarget.hh  Factory.hh  Glad.hh  PlatformProvider.hh  RawRenderer.cc  RawRenderer.hh  Shader.cc  Shader.hh  Target.cc  Target.hh  Texture.cc  Texture.hh  VertexArray.cc  VertexArray.hh
src/libcore/libcore/window/: Factory.hh  Props.hh  Window.cc  Window.hh
src/libcore/libcore/window/events/: AppEvent.hh  Event.hh  KeyEvent.hh  MouseEvent.hh
src/libcore/libcore/window/input/: Input.hh  Key.hh
src/sandbox/: CMakeLists.txt
src/sandbox/sandbox/: Main.cc
